# base-server

./: Cargo.toml  README.md
app/: Cargo.toml  env.example
app/src/: app_state.rs  common.rs  config.rs  main.rs  rate_limiter.rs
app/src/controllers/: email.rs
app/src/models/: email.rs
email-sender/: Cargo.toml  README.md
email-sender/examples/: basic_usage.rs  simple_demo.rs
email-sender/src/: email.rs  lib.rs
