[workspace]
resolver = "3"
default-members = ["app"]
members = ["app", "email-sender"]

[workspace.dependencies]
anyhow = "1.0.98"
dotenv = "0.15.0"
dashmap = "0.10.6"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
env_logger = "0.11.8"
rand = "0.9.1"
derive_builder = "0.20.2"
once_cell = "1.21.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
chrono = { version = "0.4.41", features = ["serde"] }
lazy_static = "1.5.0"
tokio = { version = "1", features = ["full"] }

macros = { path = "macros" }
email-sender = { path = "email-sender" }