[package]
name = "app"
version = "0.1.0"
edition = "2021"

[dependencies]
email-sender = { workspace = true }
actix-web = "4.4"
actix-cors = "0.7"
tracing = { workspace = true }
tracing-subscriber = "0.3"
anyhow = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
once_cell = { workspace = true }
dotenv = { workspace = true }
env_logger = "0.11"
derive_builder = "0.20"
lazy_static = "1.5"
chrono = { workspace = true }